Changelog
---------
        * Fixed:
            L 01/16/2010 - 11:47:21: [SM] Plugin encountered error 4: Invalid parameter or parameter type
            L 01/16/2010 - 11:47:21: [SM] Native "Format" reported: Language phrase "CommandPanel: !top10 to see the top 10 winners on the server" not found
            L 01/16/2010 - 11:47:21: [SM] Displaying call stack trace for plugin "gungame.smx":
            L 01/16/2010 - 11:47:21: [SM]   [0]  Line 345, gungame/menu.sp::ShowCommandPanel()
            L 01/16/2010 - 11:47:21: [SM]   [1]  Line 111, gungame/commands.sp::_CmdCommand()
        
    1.0.7.12:
        * Fixed FFA
        
    1.0.7.11:
        * Fixed UnlimitedNadesMinPlayers for player numbers more then "1".
        
    1.0.7.10:
        + Added config variable "NumberOfNades" to set custom number of nades for the nade level.
          
    1.0.7.9:
        + Added config variable "UnlimitedNadesMinPlayers":
            If UnlimitedNades is off and the number of players in one team less or 
            equal to UnlimitedNadesMinPlayers then enable UnlimitedNades.
            When it will be more players on both teams, turn UnlimitedNades back to off.
        * If enabled weapon reloading on kill then reload warmup weapon.
        + FFA config variable added into config file.
        + WarmupRandomWeaponMode config variable added into config file.
        * Refactoring of player_spawn hook.
        
    1.0.7.8:
        * Fixed: Url encode player names in gungame_display_winner in the url.
        * Fixed: Do not show info about loosing level on tk on warmup.
        
    1.0.7.7:
        * Fixed: gungame_display_winner must show motd only after database has been updated.
        * Fixed: when player switches team do not level down him, but when he selects the same
            team he must loose his level.

    1.0.7.6:
        * Fixed bug:
            Bug report: When player moves to spec by afk plugin then his gun does not removes.