@@ -5,8 +5,6 @@ TODO
     ----====----==== Normal priority list ----====----====
     
     * Feature request:
-        Redone stats plugin to work with all types of databases without recompiling. 
-    * Feature request:
         I'm talking about config option to subtract specified number of levels from level given by handicap. 
     * Feature request:
         What about a config option for player armor?
