@@ -1,5 +1,9 @@
 Changelog
 ---------
+        * Improvement: Stats plugin now checks sourcemod database config for section "gungame" 
+            and only if there is no such section then use "storage-local". So now you can 
+            use different databases for gungame and other plugins.
+        * Improvement: Stats plugin has been rewritten to support all types of databases without recompiling.
         * Fixed:
             L 01/16/2010 - 11:47:21: [SM] Plugin encountered error 4: Invalid parameter or parameter type
             L 01/16/2010 - 11:47:21: [SM] Native "Format" reported: Language phrase "CommandPanel: !top10 to see the top 10 winners on the server" not found
